downgraded to compatible jdk version